--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 <body>
     <a name="home"></a>
 <nav class="navbar navbar-expand-md navbar-dark bg-dark sticky-top">
-    <img src="images/logo.png">
+    <img src="logo.png">
         <button class="navbar-toggler border ml-auto" data-toggle="collapse" data-target="#collapse_target" type="button">
             <span class="navbar-toggler-icon"></span>
         </button>
